# llm-text-adventure

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  package.json  run-wasm.sh  setup-session-server.sh  test-session-server.sh  test_llm_cli.sh  test_movement.rs  test_movement_demo.rs
.opencode/tool/: text-adventure.ts
docs/: llm-debugger.md  movement-design.md  roadmap.md  session-server-implementation.md
saves/: new_world.json
session-server/: README.md  index.js  package-lock.json  package.json
session-server/saves/: TestTool.json  TestWorld.json
src/: agent.rs  cli.rs  commands.rs  game.rs  image.rs  input.rs  lib.rs  llm.rs  llm_tests.rs  main.rs  model.rs  parsing.rs  save.rs  tools.rs  tui.rs  wasm.rs
