[package]
name = "llm-text-adventure"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics", "rng-rand"] }
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
